Refine column construction